# contract-testing-playwright

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: contract-tests.yml
contracts/jsonplaceholder/: v1.0.0.yaml  v1.1.0.yaml
contracts/openbrewerydb/: v1.0.0.yaml  v1.1.0.yaml
contracts/petstore/: v1.0.0.yaml  v1.1.0.yaml  v2.0.0.yaml
contracts/realworld/: v1.0.0.yaml  v1.1.0.yaml
scripts/: coverage_report.py  diff_contracts.py  generate_schema.py  validate_specs.py
src/: __init__.py  adapters.py  contract_manager.py  diff_engine.py  schema_generator.py  validation_engine.py
tests/: conftest.py  test_diff_engine.py  test_jsonplaceholder.py  test_openbrewerydb.py  test_petstore.py  test_realworld.py
